#1492 Helium MS. Fase 1 - Tramitació de tasques